package com.inf5153.api.daos;

import com.inf5153.api.models.Antecedant;

import org.springframework.stereotype.Service;

@Service
public class AntecedantDAO extends AbstractDAO<Antecedant,Integer>{

}
