package com.inf5153.api.daos;
import com.inf5153.api.models.DocumentHistory;

import org.springframework.stereotype.Service;

@Service
public class DocumentHistoryDAO extends AbstractDAO<DocumentHistory,Integer>{

}
