package com.inf5153.api.services;
import com.inf5153.api.models.DocumentHistory;

import org.springframework.stereotype.Service;

@Service
public class DocumentHistoryService extends AbstractService<DocumentHistory,Integer> {

}
