package com.inf5153.api.services;

import com.inf5153.api.models.Document;

import org.springframework.stereotype.Service;

@Service
public class DocumentService extends AbstractService<Document,Integer> {

}
