package com.inf5153.api.services;

import com.inf5153.api.models.Visit;

import org.springframework.stereotype.Service;

@Service
public class VisitService extends AbstractService<Visit,Integer> {

}
